<!DOCTYPE resources [<!ENTITY app_text "松鼠">]>

<resources>
    <string name="app_name">电报仓鼠</string>
    <string name="version_code">版本号</string>
    <string name="home">首页</string>
    <string name="market">市场</string>
    <string name="game">游戏</string>
    <string name="quest">任务</string>
    <string name="mine">我的</string>
    <string name="sign_in">登录</string>
    <string name="sign_in_now">立即登录</string>
    <string name="sign_up">注册</string>
    <string name="setting">设置</string>
    <string name="logout">退出登录</string>
    <string name="app_content">&app_text;</string>
    <string name="i_agree">我已阅读并同意</string>
    <string name="account_registration">账号注册</string>
    <string name="registration_hint">为了提高账号安全，请设置不小于8位数字与字母的密码</string>
    <string name="phone_number">手机号</string>
    <string name="hint_input_mobile">请输入手机号</string>
    <string name="sign_up_password">登录密码</string>
    <string name="hint_input_password">请输入登录密码</string>
    <string name="hint_input_verify">请输入验证码</string>
    <string name="receive_identity_code">获取验证码</string>
    <string name="invite_code">邀请码</string>
    <string name="hint_invite_code">请输入邀请码</string>
    <string name="confirm">确认</string>
    <string name="cencel">取消</string>
    <string name="wrong_phonenum">手机号有误或已注册</string>
    <string name="wait_sms">请稍等...</string>
    <string name="get_sms_fail">获取失败</string>
    <string name="toast_password_too_short">登录密码过短</string>
    <string name="wrong_sms_verify">验证码有误</string>
    <string name="recommended_to_agree">为了更好的保障您的合法权益，请您阅读并同意《用户使用协议》和《隐私协议》</string>
    <string name="real_name_authentication_des">为了您的账户安全\n请先实名认证绑定账号</string>
    <string name="login_password">密码登录</string>
    <string name="login_sms">验证码登录</string>
    <string name="login_phone_num">手机号登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="worng_pn_or_psw">手机号或密码错误</string>
    <string name="login_success">登录成功</string>
    <string name="find_psw">找回密码</string>
    <string name="verify_by_phone">使用已注册的手机号验证</string>
    <string name="improve_account_security">为了提高账号安全 请设置不小于8位数字与字母的密码</string>
    <string name="phone_verified">注册手机号</string>
    <string name="next_step">下一步</string>
    <string name="new_password">请输入新登录密码</string>
    <string name="new_password_again">请再次输入新登录密码</string>
    <string name="phone_num_incorrect_or_notregistered">手机号有误或未注册</string>
    <string name="psw_too_short">密码位数过短</string>
    <string name="psw_not_equals">新密码不一致，请重新输入</string>
    <string name="set_psw_success">密码修改成功</string>
    <string name="set_psw_fail">密码修改失败</string>
    <string name="worng_phonenum_or_verifycode">手机号或验证码错误</string>
    <string name="worng_verifycode">验证码错误</string>
    <string name="personal_image">个人形象</string>
    <string name="medal_achievement">成就勋章</string>
    <string name="nickname">昵称</string>
    <string name="uid">uid</string>
    <string name="achievement">成就</string>
    <string name="view_all">查看全部</string>
    <string name="skin">皮肤</string>
    <string name="avatar">头像</string>
    <string name="unlock_now">立即解锁</string>
    <string name="buy_skin">购买\n皮肤</string>
    <string name="satiety">饱食度</string>
    <string name="cleanliness">清洁度</string>
    <string name="update_nickname">修改我的昵称</string>
    <string name="edit_new_nickname">请输入新昵称</string>
    <string name="nickname_max">昵称不长于8个文字</string>
    <string name="nickname_current">0/8</string>
    <string name="nickname_available">我可用的 99999</string>
    <string name="purchase_successful">购买成功</string>
    <string name="cleaning_hamster">清洗仓鼠</string>
    <string name="resurrection_hamster">复活仓鼠</string>
    <string name="feed_hamster">喂养仓鼠</string>
    <string name="hamster_strategy">仓鼠攻略</string>
    <string name="game_center">游戏中心</string>
    <string name="game_center_describe">在游戏中心游玩各类游戏可以获得大量的金仓鼠奖励</string>
    <string name="coming_soon">敬请期待</string>
    <string name="receive">领取</string>
    <string name="currency_conversion">货币转换</string>
    <string name="give_away">赠送</string>

    <string name="hamster_strategy_details">1、使用松果直接饲养仓鼠，您将成为它们最好的朋友，可以喂养它们，和它们一起玩耍\n
        2、每隔几个小时，它们就会感到饥饿，您需要使用松果喂养它们；及时的清洁喂养，能使仓鼠保持健康\n
        3、如果饱食度或清洁度将为0，仓鼠将无法参与各种玩法，您需要在7日内花费松果将它复活，否则将永远失去您的仓鼠
    </string>

    <string name="i_see">我知道了</string>
    <string name="get_more_rewards">获取更多奖励</string>
    <string name="daily_quest">每日任务</string>
    <string name="invite_friends">邀请好友</string>
    <string name="daily_quest_detail">完成任务获得更多产能奖励</string>
    <string name="invite_friends_detail">你和你的朋友都将获得奖励</string>
    <string name="invite_friends_detail_2">成功邀请好友可以领取一定数量的松果～</string>
    <string name="invite_friends_detail_3">您邀请好友且激活可以获得松果奖励，每邀请1人返25%松果，间接邀请返3%</string>
    <string name="total_pine_awarded">共奖励松果</string>
    <string name="total_number_of_invited_people">共邀请人数</string>
    <string name="go_finish">去完成</string>
    <string name="wait_to_reward">待领取</string>
    <string name="finished">已完成</string>
    <string name="friend_rewards">好友奖励</string>
    <string name="my_rewards_code">我的邀请码</string>
    <string name="friends_i_invited">我邀请的好友</string>
    <string name="have_no_friends_now">您现在暂时还没有好友哦</string>
    <string name="save_poster">保存到相册</string>
    <string name="hamster_orchard">仓鼠果园</string>
    <string name="Squirrel_bank">松鼠银行</string>
    <string name="to_be_activated">待激活</string>
    <string name="sold_out">已售罄</string>
    <string name="electronic_hamsters">电子仓鼠</string>
    <string name="pinecone_passbook">迷你松果存折</string>
    <string name="collect_daily">每日采集</string>
    <string name="wind_interest">利息</string>
    <string name="card_production_of_pine_cones">卡片生产的松果</string>
    <string name="activate_hamster_cultivation_new_gameplay">激活仓鼠养成新玩法</string>

    <string name="please_activate_first">未解锁，请先激活</string>
    <string name="confirm_activation">确认激活</string>
    <string name="activate_now">立即激活</string>
    <string name="activation_successful">激活成功</string>
    <string name="collecting_in_progress">采集中...</string>
    <string name="in_effect">生效中...</string>
    <string name="go_to_real_name">去实名</string>
    <string name="my_warehouse">我的仓库</string>
    <string name="health_game_advice">抵制不良游戏，拒绝盗版游戏。 注意自我保护，谨防受骗上当。\n 适度游戏益脑，沉迷游戏伤身。 合理安排时间，享受健康生活。</string>

    <string name="account_security">账号安全</string>
    <string name="personal_information_collection_checklist">个人信息收集清单</string>
    <string name="list_of_third_party_information_sharing">第三方信息共享清单</string>
    <string name="about_us">关于我们</string>
    <string name="check_logout">您确定要退出登录吗？</string>
    <string name="change_phone_number">更换手机号</string>
    <string name="password_login">登录密码</string>
    <string name="real_name_authentication">实名认证</string>

    <string name="current_bound_phone_number">当前绑定手机号</string>
    <string name="pls_enter_new_phone_num">为了提高账号安全 请输入新手机号进行绑定</string>
    <string name="enter_new_phone_num">请输入新的手机号</string>
    <string name="change_phone_num">该手机号已注册绑定，请更换其他手机号</string>
    <string name="change_phone_num_success">手机号更换成功</string>
    <string name="change_login_psw">修改登录密码</string>
    <string name="verify_binding_phone_number">验证绑定手机号</string>
    <string name="real_name">真实姓名</string>
    <string name="card_id">身份证号</string>
    <string name="authentication_status">认证状态</string>
    <string name="pls_enter_card_id">请输入身份证号</string>
    <string name="pls_enter_real_name">请输入真实姓名</string>
    <string name="not_authenticated">未认证</string>
    <string name="verified">已认证</string>
    <string name="real_name_authentication_detail_1">*请填写真实有效的身份信息，否则无法使用部分服务</string>
    <string name="real_name_authentication_detail_2">*若身份信息填写错误，请联系客服处理</string>
    <string name="real_name_authentication_success">实名认证成功</string>
    <string name="real_name_authentication_failed">实名认证失败</string>

    <string name="cancel_account">注销账号</string>
    <string name="cancel_account_des">为保证你的账号安全，在你提交的注销申请生效前，需同时满足以下条件：</string>
    <string name="cancel_account_des_1">1、账号注销不是退出登录，注销后将清空所有数据且不可恢复</string>
    <string name="cancel_account_des_2">2、账号财产已清算</string>
    <string name="cancel_account_des_2_sub">没有资产，未结清的资产和虚拟权益，本账号及通过本账号接入第三方中没有未完成或存在争议的服务</string>
    <string name="cancel_account_des_3">3、账号权限解除</string>
    <string name="cancel_account_des_3_sub">账号已解除与其他从的授权登录或绑定关系</string>
    <string name="agree">同意</string>
    <string name="agree_not_now">暂不同意</string>
    <string name="please_check_the_agreement">请勾选协议</string>
    <string name="privacy_agreement">隐私协议</string>
    <string name="software_usage_agreement">软件使用协议</string>
    <string name="account_has_been_applied_for_cancellation">账号（UID：XXXXX）于XXXX年X月X日申请注销，7天内可以撤销申请，过期则自动注销账号</string>
    <string name="recover_account">恢复账号</string>
    <string name="think_again">再想想</string>
    <string name="account_recovery_successful">账号恢复成功</string>
    <string name="account_recovery_fail">账号恢复失败</string>
    <string name="collection_instructions">采集说明</string>
    <string name="collection_instructions_describe">采集周期7天，每天采集0.1松果，到期预计总采集松果0.7个</string>
    <string name="pinecone_transfer_in_out_records">松果转入/转出记录</string>
    <string name="transfer_in_out_records">转入/转出记录</string>

    <string name="coinType_all">所有记录</string>
    <string name="coinType_001">松果领取</string>
    <string name="coinType_002">松果转入</string>
    <string name="coinType_003">存折获取</string>
    <string name="coinType_004">市场消费</string>
    <string name="coinType_005">购买皮肤头像</string>
    <string name="coinType_006">任务获得</string>
    <string name="coinType_007">邀新获得</string>
    <string name="coinType_008">养成消费</string>
    <string name="coinType_009">松果转出</string>
    <string name="coinType_010">管理员添加</string>
    <string name="coinType_011">管理员扣除</string>

</resources>
