<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <include layout="@layout/fast_layout_title_bar" />

    <TextView
        android:id="@+id/tv_account_security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/account_security"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleBar_headFastLib" />

    <com.allen.library.SuperTextView
        android:id="@+id/stv_change_phone_number"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_account_security"
        app:sLeftTextString="@string/change_phone_number" />

    <com.allen.library.SuperTextView
        android:id="@+id/stv_login_password"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stv_change_phone_number"
        app:sLeftTextString="@string/password_login" />

    <com.allen.library.SuperTextView
        android:id="@+id/stv_real_name_authentication"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stv_login_password"
        app:sLeftTextString="@string/real_name_authentication" />

    <com.allen.library.SuperTextView
        android:id="@+id/stv_cancel_account"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stv_real_name_authentication"
        app:sLeftTextString="@string/cancel_account" />

</androidx.constraintlayout.widget.ConstraintLayout>