<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <include layout="@layout/fast_layout_title_bar" />

    <TextView
        android:id="@+id/tv_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/setting"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleBar_headFastLib" />

    <com.allen.library.SuperTextView
        android:id="@+id/stv_account_security"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_setting"
        app:sLeftTextString="@string/account_security" />

    <com.allen.library.SuperTextView
        android:id="@+id/stv_personal_information_collection_checklist"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stv_account_security"
        app:sLeftTextString="@string/personal_information_collection_checklist" />

    <com.allen.library.SuperTextView
        android:id="@+id/stv_list_of_third_party_information_sharing"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stv_personal_information_collection_checklist"
        app:sLeftTextString="@string/list_of_third_party_information_sharing" />

    <com.allen.library.SuperTextView
        android:id="@+id/stv_about_us"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stv_list_of_third_party_information_sharing"
        app:sLeftTextString="@string/about_us" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/selector_verify_bg"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@drawable/selector_verify_code_text_color"
        android:textSize="@dimen/text_size_15"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/stv_account_security"
        app:layout_constraintRight_toRightOf="@id/stv_account_security" />

</androidx.constraintlayout.widget.ConstraintLayout>