<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <include layout="@layout/fast_layout_title_bar" />

    <TextView
        android:id="@+id/tv_cancel_account_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_common"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_common"
        android:gravity="start"
        android:text="@string/cancel_account_des"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleBar_headFastLib" />

    <TextView
        android:id="@+id/tv_cancel_account_des_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:gravity="start"
        android:text="@string/cancel_account_des_1"
        android:textColor="@color/red_light"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintLeft_toLeftOf="@id/tv_cancel_account_des"
        app:layout_constraintRight_toRightOf="@id/tv_cancel_account_des"
        app:layout_constraintTop_toBottomOf="@id/tv_cancel_account_des" />

    <TextView
        android:id="@+id/tv_cancel_account_des_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:gravity="start"
        android:text="@string/cancel_account_des_2"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintLeft_toLeftOf="@id/tv_cancel_account_des"

        app:layout_constraintTop_toBottomOf="@id/tv_cancel_account_des_1" />

    <TextView
        android:id="@+id/tv_cancel_account_des_2_sub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_7"
        android:gravity="start"
        android:text="@string/cancel_account_des_2_sub"
        android:textColor="@color/text_white_66"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintLeft_toLeftOf="@id/tv_cancel_account_des"
        app:layout_constraintRight_toRightOf="@id/tv_cancel_account_des"
        app:layout_constraintTop_toBottomOf="@id/tv_cancel_account_des_2" />

    <TextView
        android:id="@+id/tv_cancel_account_des_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:gravity="start"
        android:text="@string/cancel_account_des_3"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintLeft_toLeftOf="@id/tv_cancel_account_des"
        app:layout_constraintTop_toBottomOf="@id/tv_cancel_account_des_2_sub" />

    <TextView
        android:id="@+id/tv_cancel_account_des_3_sub"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_7"
        android:gravity="start"
        android:text="@string/cancel_account_des_3_sub"
        android:textColor="@color/text_white_66"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintLeft_toLeftOf="@id/tv_cancel_account_des"
        app:layout_constraintRight_toRightOf="@id/tv_cancel_account_des"
        app:layout_constraintTop_toBottomOf="@id/tv_cancel_account_des_3" />


    <CheckBox
        android:id="@+id/cb_agree"
        android:shadowColor="@color/cb_login"
        android:layout_width="wrap_content"
        android:text="@string/agree"
        android:buttonTint="@color/cb_login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_confirm"
        app:layout_constraintLeft_toLeftOf="@id/tv_cancel_account_des"
        android:layout_marginBottom="@dimen/margin_10"
        />

    <TextView
        android:id="@+id/tv_account_cancel_agreement"
        android:layout_width="wrap_content"
        android:textSize="@dimen/text_size_14"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/cb_agree"
        app:layout_constraintBottom_toBottomOf="@id/cb_agree"
        app:layout_constraintLeft_toRightOf="@id/cb_agree"
        android:layout_marginLeft="2dp"
        />
    
    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_60"

        android:layout_marginBottom="@dimen/margin_30"
        android:background="@drawable/shape_next_bg"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/tv_cancel_account_des"
        app:layout_constraintRight_toRightOf="@id/tv_cancel_account_des" />


</androidx.constraintlayout.widget.ConstraintLayout>