<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_update_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_10"
        android:text="@string/update_nickname"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_19"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_btn_bg"
        android:hint="@string/edit_new_nickname"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/text_gray_aaa"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_update_nickname"
        android:maxLength="8"
        />

    <TextView
        android:id="@+id/tv_nickname_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/nickname_max"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintLeft_toLeftOf="@id/et_nickname"
        app:layout_constraintTop_toBottomOf="@id/et_nickname" />

    <TextView
        android:id="@+id/tv_nickname_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/nickname_current"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintRight_toRightOf="@id/et_nickname"
        app:layout_constraintTop_toBottomOf="@id/et_nickname" />


    <TextView
        android:id="@+id/tv_nickname_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_10"
        android:text="@string/nickname_available"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nickname_current"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_60"
        android:layout_marginEnd="@dimen/margin_60"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_10"
        android:background="@drawable/btn_common_bg"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_19"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nickname_available" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_60"
        android:layout_marginEnd="@dimen/margin_60"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_40"
        android:background="@drawable/btn_common_bg"
        android:text="@string/cencel"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_19"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_confirm"
        />
    
    <TextView

        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />
</androidx.constraintlayout.widget.ConstraintLayout>