<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <include layout="@layout/fast_layout_title_bar" />

    <com.aries.smart.module.widget.RoundImageView
        android:id="@+id/riv_icon"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="@dimen/margin_20"
        android:src="@drawable/icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleBar_headFastLib" />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/riv_icon" />

    <TextView
        android:id="@+id/tv_version_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:text="@string/version_code"
        android:textColor="@color/text_white_66"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

    <com.allen.library.SuperTextView
        android:id="@+id/stv_privacy_agreement"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_version_code"
        app:sLeftTextString="@string/privacy_agreement" />

    <com.allen.library.SuperTextView
        android:id="@+id/stv_software_usage_agreement"
        style="@style/SupperTextStyleItem"
        android:layout_marginTop="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stv_privacy_agreement"
        app:sLeftTextString="@string/software_usage_agreement" />

</androidx.constraintlayout.widget.ConstraintLayout>