<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:background="@drawable/bottom_sheet_bg"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_recommended_to_agree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_10"
        android:text="@string/recommended_to_agree"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_15" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_15"
        android:background="@drawable/btn_common_bg_blue"
        android:text="@string/agree"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_17"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_7"
        android:layout_marginEnd="@dimen/margin_15"
        android:layout_marginBottom="@dimen/margin_10"
        android:background="@drawable/selector_verify_bg"
        android:text="@string/agree_not_now"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_17"
        android:textStyle="bold" />
</LinearLayout>