<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="220dp"
    android:layout_height="130dp"
    android:background="@drawable/shape_btn_bg"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_recommended_to_agree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/real_name_authentication_des"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="95dp"
            android:layout_height="35dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:background="@drawable/shape_btn_bg_radius_blue_deep"
            android:text="@string/cencel"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="95dp"
            android:layout_height="35dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:background="@drawable/shape_btn_bg_radius_blue"
            android:text="@string/go_to_real_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>