<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="150dp"
    android:background="@drawable/shape_btn_bg"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_account_recovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/margin_10"
        android:gravity="center"
        android:text="@string/account_has_been_applied_for_cancellation"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="95dp"
            android:layout_height="35dp"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_10"
            android:layout_weight="1"
            android:background="@drawable/shape_btn_bg_radius_blue_deep"
            android:text="@string/think_again"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="95dp"
            android:layout_height="35dp"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_10"
            android:layout_weight="1"
            android:background="@drawable/shape_btn_bg_radius_blue"
            android:text="@string/recover_account"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>